# variant-cpp11

./: .clang-format  .clang-tidy  .cmake-format.py  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md
benchmark/: CMakeLists.txt  assignment_test.cpp  get_test.cpp
cmake/: ConfigureClangTidy.cmake
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt
example/: CMakeLists.txt  example.cpp
include/variant_cpp11/: variant.h
scripts/: collect_llvm_coverage.sh  collect_test_results.sh  execute_benchmarks.sh
tests/: CMakeLists.txt  create_test.cpp  hash_test.cpp  is_all_true_test.cpp  main.cpp  max_size_test.cpp  object_count.cpp  object_count.h  variant_helper_test.cpp  variant_test.cpp
